--- a/Client Web/Template/css/template.css
+++ b/Client Web/Template/css/template.css
@@ -1063,7 +1063,7 @@ body{color: #444;line-height:1.9em;margin:0 !important;
         background: #6c757d;
     }
 
-    .btn-env{
+    .btn-eos{
         margin-top: 5px; 
         width:100%;
         box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12); 
